--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       const radius = Math.sqrt((adjustedHeatRadiationRate * solarConstant) / (4 * Math.PI * Math.pow(surfaceTemperature, 4) * (1 - albedo)));
 
       // Output the result
-      document.getElementById('radiusOutput').innerHTML = `Estimated Planet Radius: ${radius.toFixed(2)} meters`;
+      document.getElementById('radiusOutput').innerHTML = `Estimated Planet Radius: ${radius.toFixed(2)} kilometers`;
     }
 
     // Function to calculate the core temperature (dummy calculation for now)
